# agri

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
drinkwell/: hooks.py  modules.txt
drinkwell/api/: branding.py  seed.py  survey.py
drinkwell/drinkwell/data/: farmer_data.json
drinkwell/drinkwell/doctype/crop/: crop.json
drinkwell/drinkwell/doctype/farmer/: farmer.json
drinkwell/drinkwell/doctype/farmer_survey_response/: farmer_survey_response.json  farmer_survey_response.py
drinkwell/drinkwell/doctype/government_scheme/: government_scheme.json
drinkwell/krishisetu/api/: branding.py
drinkwell/krishisetu/doctype/crop/: crop.json  crop.py
drinkwell/krishisetu/doctype/farmer/: farmer.json  farmer.py
drinkwell/krishisetu/doctype/farmer_survey_response/: farmer_survey_response.json
drinkwell/krishisetu/doctype/government_scheme/: government_scheme.json  government_scheme.py
drinkwell/public/css/: desk.css  krishisetu.css
drinkwell/public/js/: ks.js
drinkwell/www/: about.html  dashboard.html  farmers.html  index.html  insights.html  report.html  schemes.html  schemes.py  survey.html
