[project]
name = "drinkwell"
authors = [{ name = "10x Impact", email = "shivansh@10ximpact.in" }]
description = "KrishiSetu — Farmer Insights & Survey Platform"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
